--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -23,4 +23,6 @@ jobs:
           cd /home/ubuntu/MovieGlass_Node
           git pull origin main
           npm install
+          pm2 describe movieglass > /dev/null || pm2 start index.js --name movieglass
           pm2 restart movieglass
+          pm2 save
