--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "openai": "^4.83.0",
     "socket.io": "^4.8.1"
